fixed alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,8 +64,6 @@ footer a {color: 024e76;}
     font-size: 24px;
     margin: 0}
 
-.hero-form p { margin: 5px 0 15px 0}
-
 .form-input {
   border: 1px solid #024e76;
   display: block;
